--- a/src/Circles.module.css
+++ b/src/Circles.module.css
@@ -4,6 +4,17 @@
   height: 100%;
 }
 
+.circle-counter {
+  position: absolute;
+  top: 1rem;
+  left: 1rem;
+  padding: 1rem;
+  border-radius: 1rem;
+  background: #fffa;
+  backdrop-filter: blur(0.5rem);
+  user-select: none;
+}
+
 .controls {
   position: absolute;
   left: 50%;
@@ -24,6 +35,7 @@
     opacity: 1;
   }
 }
+
 .welcome-message {
   position: absolute;
   top: 50%;
@@ -31,6 +43,8 @@
   translate: -50% -50%;
   animation: fade-in 2s;
   text-align: center;
+  user-select: none;
+  pointer-events: none;
 
   & h1 {
     margin-top: 0;
