--- a/src/demo/App.module.css
+++ b/src/demo/App.module.css
@@ -1,25 +1,12 @@
-.svg {
-  display: block;
-  width: 100%;
-  height: 100%;
+.page {
+  position: relative;
+  height: 100dvh;
 }
 
 .circle-counter {
   position: absolute;
   top: 1rem;
   left: 1rem;
-  padding: 1rem;
-  border-radius: 1rem;
-  background: #fffa;
-  backdrop-filter: blur(0.5rem);
-  user-select: none;
-}
-
-.controls {
-  position: absolute;
-  left: 50%;
-  translate: -50% 0;
-  bottom: 2rem;
   padding: 1rem;
   border-radius: 1rem;
   background: #fffa;
@@ -49,4 +36,8 @@
   & h1 {
     margin-top: 0;
   }
+}
+
+.canvas {
+  image-rendering: pixelated;
 }
