--- a/src/demo/App.module.css
+++ b/src/demo/App.module.css
@@ -1,16 +1,34 @@
+.light {
+  --color-text: black;
+  --color-background: white;
+}
+
+.dark {
+  --color-text: white;
+  --color-background: black;
+}
+
+/* derived variables */
+.page {
+  --color-control-background: rgb(from var(--color-background) r g b / 50%);
+}
+
 .page {
   position: relative;
   height: 100dvh;
+  color: var(--color-text);
 }
 
 .controls {
   position: absolute;
+  display: flex;
+  gap: 1rem;
   left: 50%;
   translate: -50% 0;
   bottom: 2rem;
   padding: 1rem;
   border-radius: 1rem;
-  background: #fffa;
+  background: var(--color-control-background);
   backdrop-filter: blur(0.5rem);
   user-select: none;
 }
@@ -21,7 +39,7 @@
   left: 1rem;
   padding: 1rem;
   border-radius: 1rem;
-  background: #fffa;
+  background: var(--color-control-background);
   backdrop-filter: blur(0.5rem);
   user-select: none;
 }
